development-alt - Updated title. Fixed post formatting on mobile. Fixed grammar issues. Added box shadow to images.

--- a/src/css/_post.scss
+++ b/src/css/_post.scss
@@ -514,7 +514,11 @@
 .lazyimage {
     background-color: $yellow;
     display: block;
-    min-height: 20rem;
+    border: 1px solid #f1f2f3;
+    -webkit-box-shadow: 0px 22px 38px -32px rgba(0,0,0,0.32);
+    -moz-box-shadow: 0px 22px 38px -32px rgba(0,0,0,0.32);
+    box-shadow: 0px 22px 38px -32px rgba(0,0,0,0.32);
+    // min-height: 20rem;
     opacity: 0;
     transition: opacity 1s ease-in-out;
     width: 100%;
